tests/snapshots/retry_chat__before_retry.snap
---
source: tests/retry_chat.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────↑─────────────Chats─────────────┐"
"│ ✦ Kwek                                                                                                                       █ 󰍩  Kwek                       │"
"│ ℹ Command chat successful in 0 seconds                                                                                       █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █─────────Chat commands─────────┤"
"│                                                                                                                              █                               │"
"│                                                                                                                              █  /new_chat       /help        │"
"│                                                                                                                              █  /delete_chat    /quit        │"
"│                                                                                                                              █  /copy           /show_config │"
"│                                                                                                                              █  /diff           /index_repos │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █                               │"
"│                                                                                                                              █──────────Keybindings──────────┤"
"│                                                                                                                              ║                               │"
"│                                                                                                                              ║ Page Up/Down - Scroll         │"
"│                                                                                                                              ↓ End - Scroll to end           │"
"├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤ Tab - Next chat               │"
"│  Send a message to an agent ...                                                                                              │ ^s - Send message             │"
"│                                                                                                                              │ ^x - Stop agent               │"
"│                                                                                                                              │ ^n - New chat                 │"
"│                                                                                                                              │ ^q - Quit                     │"
"│                                                                                                                              │                               │"
"│                                                                                                                              │                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────────────────────────┘"
"                                                                                  uuid: a1a2a3a4-b1b2-c1c2-d1d2-d3d4d5d6d7d8   branch-name: kwaak/kwek-a1a2a3a4 "
"                                                                                                                                                                "
